Fixed green button clicking on encouraged foods, and button centering on mobile.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -13,10 +13,6 @@ h1 {
 button:focus {outline:0;}
 input:focus {outline:0;}
 
-.button {
-    text-align: center;
-}
-
 /* STAGE 1: HELLO SIZE*/
 .startMessage h1 {
   font-size: 700%;
@@ -80,16 +76,13 @@ input {
     font-size: 120%;
 }
 
-
-
-
 /* NEXT BUTTON */
-.next{
+.next {
+    padding: 1px 15px 2px 15px;
     border-radius: 25px;
     border: none;
     text-align: center;
     height: 30px;
-    width: 80px;
     font-size: 20px;
     font-weight: 600;
     font-family: 'IBM Plex Sans';
@@ -211,21 +204,6 @@ h2#funFactText {
     #higherMessage{
         margin-top: 15%;
     }
-}
-
-#edit,#buy{
-    margin-top: 1%;
-    border-radius: 25px;
-    border: none;
-    height: 30px;
-    width: 80px;
-    font-size: 20px;
-    font-weight: 600;
-    font-family: 'IBM Plex Sans';
-    background-color: white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    margin:10px;
 }
 
 #edit {
